force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>For Provider Relations Training Attestation Cases.</description>
    <label>Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>