force-app/main/default/objects/Case/fields/Attestation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Cultural Competency case has been approved. This is filled out by the DDMN web apps after clicking the Approve Attestation button on the Cultural Competency Layout and is Read Only.</description>
    <inlineHelpText>Marks whether or not this Cultural Competency Attestation has been Approved or not.</inlineHelpText>
    <label>Attestation Approved</label>
    <type>Checkbox</type>
</CustomField>