force-app/main/default/objects/Case/fields/Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Name__c</fullName>
    <description>For Provider Relations Training Attestation Cases.</description>
    <label>Clinic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>