force-app/main/default/objects/Case/fields/Cultural_Awareness_Capability__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Awareness_Capability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if any of this Provider&apos;s staff is certified in the Cultural Capability called Cultural Awareness. Fill out by DDMN web apps Cultural Competency Form.</description>
    <inlineHelpText>Checked if any of this Provider&apos;s staff is certified in the Cultural Capability called Cultural Awareness.</inlineHelpText>
    <label>Cultural Awareness Capability</label>
    <type>Checkbox</type>
</CustomField>