force-app/main/default/objects/Case/fields/Cultural_Compliance_Capability__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Compliance_Capability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if any of this Provider&apos;s staff is certified in the Cultural Capability called Cultural Compliance. Fill out by DDMN web apps Cultural Competency Form.</description>
    <inlineHelpText>Checked if any of this Provider&apos;s staff is certified in the Cultural Capability called Cultural Compliance.</inlineHelpText>
    <label>Cultural Compliance Capability</label>
    <type>Checkbox</type>
</CustomField>