force-app/main/default/objects/Case/fields/Digital_Signature__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Provider Relations Training Attestation Cases.</description>
    <label>Digital Signature</label>
    <type>Checkbox</type>
</CustomField>