force-app/main/default/objects/Case/fields/Equipment_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Provider Relations Training Attestation Cases.</description>
    <label>Equipment Accessible</label>
    <type>Checkbox</type>
</CustomField>