force-app/main/default/objects/Case/fields/Exam_Rooms_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Exam_Rooms_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Training Attestation Cases.</description>
    <label>Exam Rooms Accessible</label>
    <type>Checkbox</type>
</CustomField>