force-app/main/default/objects/Case/fields/Npi_No__c.field-meta.xml
<CustomField>
    <fullName>Npi_No__c</fullName>
    <description>For Provider Relations Training Attestation Cases</description>
    <label>Npi No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>