force-app/main/default/objects/Case/fields/Office_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Office_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Provider Relations Training Attestation Cases.</description>
    <label>Office Accessible</label>
    <type>Checkbox</type>
</CustomField>