force-app/main/default/objects/Case/fields/Provider_No__c.field-meta.xml
<CustomField>
    <fullName>Provider_No__c</fullName>
    <description>For Training Attestation Cases created from DDMN webapps.</description>
    <label>Provider No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>