force-app/main/default/objects/Case/fields/Staff_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Staff_Training_Complete__c</fullName>
    <description>This field marks whether or not a Provider&apos;s staff has completed the cultural competency training. Filled out by the DDMN web apps Cultural Competency Form.</description>
    <inlineHelpText>Has the staff of the Provider&apos;s office completed Cultural Competency Training?</inlineHelpText>
    <label>Staff Training Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>