force-app/main/default/objects/Case/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>For Provider Relations Training Attestation Cases.</description>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>