force-app/main/default/objects/Case/recordTypes/Cultural_Competency.recordType-meta.xml
<RecordType>
    <fullName>Cultural_Competency</fullName>
    <active>true</active>
    <businessProcess>Cultural Competency</businessProcess>
    <description>Used for Cultural Competency</description>
    <label>Cultural Competency</label>
</RecordType>